# ticketing3A

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
client/: main.c
include/: server_functions.h  ticketing.h
src/: client.c  server.c  server_functions.c  technicien.c  testenvoiticketserveur.c  ticketing.h
